--- a/src/main/resources/templates/documents/document-changenotices.html
+++ b/src/main/resources/templates/documents/document-changenotices.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="text-danger" th:if="${errorMessage != null}">
-        <h6 th:text="${errorMessage}"></h6>
+        <h6 th:text="#{changeNoticeRemoveErrorMessage}"></h6>
     </div>
 </div>
 </body>
