--- a/src/main/resources/templates/departments/department-form.html
+++ b/src/main/resources/templates/departments/department-form.html
@@ -11,12 +11,12 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-    <title>Save Department</title>
+    <title th:text="#{${department.isNew() ? 'saveDepartmentFormTitle' : 'updateDepartmentFormTitle'}}">Save Department</title>
 </head>
 <body>
     <div class="container">
 
-        <a href="#" onclick="goBack()">Go Back</a>
+        <a href="#" onclick="goBack()" th:text="#{goBack}">Go Back</a>
         <script>
             function goBack() {
                 window.history.back();
@@ -25,26 +25,26 @@
 
         <br><br>
 
-        <h3>Department Directory</h3>
+        <h3 th:text="#{departmentDirectory}">Department Directory</h3>
 
         <hr>
 
-        <p class="h4 mb-3 offset-sm-3">Department Card</p>
+        <p class="h4 mb-3 offset-sm-3" th:text="#{departmentCard}">Department Card</p>
 
         <form class="form-horizontal" th:object="${department}" th:action="@{/departments/save}" method="post">
 
             <div th:if="${#fields.hasErrors('*')}" class="text-danger h5 offset-sm-2">
-                <p th:text="'Please correct values in error below'">Error Message</p>
+                <p th:text="#{pleaseCorrectValues}">Error Message</p>
             </div>
 
             <input type="hidden" th:field="*{id}">
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Name:</h6>
+                    <h6 th:text="#{name} + ':'">Name:</h6>
                 </div>
                 <div class="col-sm-5">
-                    <input type="text" th:field="*{name}" th:class="${#fields.hasErrors('name')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Name'"/>
+                    <input type="text" th:field="*{name}" th:class="${#fields.hasErrors('name')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{name}"/>
                     <span class="help-block" th:if="${#fields.hasErrors('name')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('name')}" th:text="${err}"/>
@@ -55,10 +55,10 @@
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Chief name:</h6>
+                    <h6 th:text="#{chief} + ':'">Chief name:</h6>
                 </div>
                 <div class="col-sm-5">
-                    <input type="text" th:field="*{chiefName}" th:class="${#fields.hasErrors('chiefName')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Chief name'"/>
+                    <input type="text" th:field="*{chiefName}" th:class="${#fields.hasErrors('chiefName')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{chief}"/>
                     <span class="help-block" th:if="${#fields.hasErrors('chiefName')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('chiefName')}" th:text="${err}"/>
@@ -69,10 +69,10 @@
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Workers amount:</h6>
+                    <h6 th:text="#{workersAmount} + ':'">Workers amount:</h6>
                 </div>
                 <div class="col-sm-5">
-                    <input type="number" th:field="*{workersAmount}" th:class="${#fields.hasErrors('workersAmount')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Workers amount'"/>
+                    <input type="number" th:field="*{workersAmount}" th:class="${#fields.hasErrors('workersAmount')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{workersAmount}"/>
                     <span class="help-block" th:if="${#fields.hasErrors('workersAmount')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('workersAmount')}" th:text="${err}"/>
@@ -83,10 +83,10 @@
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Description:</h6>
+                    <h6 th:text="#{description} + ':'">Description:</h6>
                 </div>
                 <div class="col-sm-5">
-                    <textarea rows="3" th:field="*{description}" th:class="${#fields.hasErrors('description')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Description'"/>
+                    <textarea rows="3" th:field="*{description}" th:class="${#fields.hasErrors('description')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{description}"/>
                     <span class="help-block" th:if="${#fields.hasErrors('description')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
@@ -97,13 +97,13 @@
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Is Developer:</h6>
+                    <h6 th:text="#{isDeveloper} + ':'">Is Developer:</h6>
                 </div>
                 <div class="col-sm-5 mt-2">
                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                         <p>
-                            <input type="radio" th:field="*{isDeveloper}" th:value="1" th:checked="*{isDeveloper}">Yes
-                            <input type="radio" th:field="*{isDeveloper}" th:value="0" th:checked="*{isDeveloper}">No
+                            <input type="radio" th:field="*{isDeveloper}" th:value="1" th:checked="*{isDeveloper}" th:text="#{yes}">
+                            <input type="radio" th:field="*{isDeveloper}" th:value="0" th:checked="*{isDeveloper}" th:text="#{no}">
                         </p>
                     </div>
                     <span class="help-block" th:if="${#fields.hasErrors('isDeveloper')}">
@@ -116,13 +116,13 @@
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Use albums:</h6>
+                    <h6 th:text="#{useAlbums} + ':'">Use albums:</h6>
                 </div>
                 <div class="col-sm-5 mt-2">
                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                         <p>
-                            <input type="radio" th:field="*{canTakeAlbums}" th:value="1" th:checked="*{canTakeAlbums}">Yes
-                            <input type="radio" th:field="*{canTakeAlbums}" th:value="0" th:checked="*{canTakeAlbums}">No
+                            <input type="radio" th:field="*{canTakeAlbums}" th:value="1" th:checked="*{canTakeAlbums}" th:text="#{yes}">
+                            <input type="radio" th:field="*{canTakeAlbums}" th:value="0" th:checked="*{canTakeAlbums}" th:text="#{no}">
                         </p>
                     </div>
                     <span class="help-block" th:if="${#fields.hasErrors('canTakeAlbums')}">
@@ -134,7 +134,7 @@
             </div>
 
             <div class="row">
-                <button type="submit" class="btn-sm btn-primary offset-7" th:text="*{id} == null ? 'Save' : 'Update'">Save</button>
+                <button type="submit" class="btn-sm btn-primary offset-7" th:text="#{${department.isNew() ? 'create'  : 'update'}}">Save</button>
             </div>
 
             <br><br>
