Add i18n for ChangeNotice directory

--- a/src/main/resources/templates/changenotices/changenotice-document-list.html
+++ b/src/main/resources/templates/changenotices/changenotice-document-list.html
@@ -11,14 +11,14 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-    <title>Change documents list</title>
+    <title th:text="#{changeDocumentsList}">Change documents list</title>
 </head>
 <body>
 <div class="container">
 
     <br><br>
 
-    <h3>Change notice Directory</h3>
+    <h3 th:text="#{changeNoticeDirectory}">Change notice Directory</h3>
 
     <hr>
 
@@ -31,43 +31,52 @@
 
         <div class="row mb-1">
             <div class="col-sm-4">
-                <input type="text" th:class="${docErrorMessage == null} ? 'form-control' : 'form-control is-invalid'" th:name="newDocument" th:value="${docErrorMessage != null || numberErrorMessage != null} ? ${param.newDocument} : ''" placeholder="Decimal number"/>
+                <input type="text" th:class="${docErrorMessage == null} ? 'form-control' : 'form-control is-invalid'" th:name="newDocument" th:value="${docErrorMessage != null || numberErrorMessage != null} ? ${param.newDocument} : ''" th:placeholder="#{decimalNumber}"/>
                 <span class="help-block" th:if="${docErrorMessage != null}">
-                    <ul>
-                        <li class="text-danger" th:text="${docErrorMessage}"/>
-                    </ul>
+                    <div th:switch="${docErrorMessage}">
+                        <ul>
+                             <li class="text-danger" th:case="'Decimal number must not be empty'" th:text="#{addDocumentError.NotEmpty}"/>
+                             <li class="text-danger" th:case="'Document does not exist'" th:text="#{addDocumentError.NotExist}"/>
+                             <li class="text-danger" th:case="'This change notice already has this document'" th:text="#{changeNoticeDocumentsList.addDocumentError.AlreadyAdded}"/>
+                        </ul>
+                    </div>
                 </span>
             </div>
             <div class="col-sm-4">
-                <input type="number" th:class="${numberErrorMessage == null} ? 'form-control' : 'form-control is-invalid'" th:name="newDocumentChangeNumber" th:value="${numberErrorMessage != null || docErrorMessage != null} ? ${param.newDocumentChangeNumber} : ''" placeholder="Change number"/>
+                <input type="number" th:class="${numberErrorMessage == null} ? 'form-control' : 'form-control is-invalid'" th:name="newDocumentChangeNumber" th:value="${numberErrorMessage != null || docErrorMessage != null} ? ${param.newDocumentChangeNumber} : ''" th:placeholder="#{changeNumber}"/>
                 <span class="help-block" th:if="${numberErrorMessage != null}">
-                    <ul>
-                        <li class="text-danger" th:text="${numberErrorMessage}"/>
-                    </ul>
+                    <div th:switch="${numberErrorMessage}">
+                        <ul>
+                             <li class="text-danger" th:case="'Change number must not be empty'" th:text="#{changeNoticeDocumentsList.addDocumentError.ChangeNumberNotEmpty}"/>
+                             <li class="text-danger" th:case="'Change number must be greater than 0'" th:text="#{changeNoticeDocumentsList.addDocumentError.ChangeNumberMin}"/>
+                             <li class="text-danger" th:case="'Document already has this change number'" th:text="#{changeNoticeDocumentsList.addDocumentError.ChangeNumberAlreadyHas}"/>
+                             <li class="text-danger" th:case="'Invalid change number'" th:text="#{changeNoticeDocumentsList.addDocumentError.ChangeNumberInvalid}"/>
+                        </ul>
+                    </div>
                 </span>
             </div>
             <div class="col-sm-3">
-                <button type="submit" class="btn btn-primary">Add document</button>
+                <button type="submit" class="btn btn-primary" th:text="#{addDocument}">Add document</button>
             </div>
         </div>
     </form>
 
     <br>
 
-    <p class="h4 mb-4" th:text="${changeNotice.name} + ' documents'"></p>
+    <p class="h4 mb-4" th:text="${changeNotice.name} + ' ' + #{changeNoticeDocumentsList.documents}"></p>
 
     <div th:if="${changeNotice.documents == null || changeNotice.documents.size() == 0}">
-        <h6>No documents</h6>
+        <h6 th:text="#{noDocuments}">No documents</h6>
     </div>
 
     <div th:if="${changeNotice.documents != null && changeNotice.documents.size() != 0}">
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
-                <th class="align-middle">Decimal number</th>
-                <th class="align-middle">Name</th>
-                <th class="align-middle">Change number</th>
-                <th class="align-middle">Department</th>
-                <th class="align-middle">Action</th>
+                <th class="align-middle" th:text="#{decimalNumber}">Decimal number</th>
+                <th class="align-middle" th:text="#{name}">Name</th>
+                <th class="align-middle" th:text="#{changeNumber}">Change number</th>
+                <th class="align-middle" th:text="#{developer}">Developer</th>
+                <th class="align-middle" th:text="#{action}">Action</th>
             </thead>
             <tbody>
                 <tr th:each="entry : ${changeNotice.documents.entrySet()}">
@@ -77,14 +86,14 @@
                     <td class="align-middle text-center" th:text="${entry.key.department == null} ? '' : ${entry.key.department.name}"></td>
                     <td class="align-middle text-center">
                         <a class="btn btn-sm btn-outline-danger"
-                           th:href="@{'/changenotices/removeDocument/' + ${changeNotice.id} + '/' + ${entry.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
+                           th:href="@{'/changenotices/removeDocument/' + ${changeNotice.id} + '/' + ${entry.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false" th:text="#{remove}">Remove</a>
                     </td>
                 </tr>
             </tbody>
         </table>
     </div>
     <div class="text-danger" th:if="${errorMessage != null}">
-        <h5 th:text="${errorMessage}"></h5>
+        <h5 th:text="#{changeNoticeDocumentsList.docRemoveErrorMessage}"></h5>
     </div>
 </div>
 </body>
