--- a/src/main/resources/templates/changenotices/changenotice-form.html
+++ b/src/main/resources/templates/changenotices/changenotice-form.html
@@ -11,12 +11,12 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-    <title>Save change notice</title>
+    <title th:text="#{${changeNotice.isNew() ? 'saveChangeNoticeFormTitle' : 'updateChangeNoticeFormTitle'}}">Save change notice</title>
 </head>
 <body>
     <div class="container">
 
-        <a href="#" onclick="goBack()">Go Back</a>
+        <a href="#" onclick="goBack()" th:text="#{goBack}">Go Back</a>
         <script>
             function goBack() {
                 window.history.back();
@@ -25,26 +25,26 @@
 
         <br><br>
 
-        <h3>Change notice Directory</h3>
+        <h3 th:text="#{changeNoticeDirectory}">Change notice Directory</h3>
 
         <hr>
 
-        <p class="h4 mb-3 offset-sm-3">Change notice Card</p>
+        <p class="h4 mb-3 offset-sm-3" th:text="#{changeNoticeCard}">Change notice Card</p>
 
         <form class="form-horizontal" th:object="${changeNotice}" th:action="@{/changenotices/save}" method="post">
 
             <div th:if="${#fields.hasErrors('*')}" class="text-danger h5 offset-sm-2">
-                <p th:text="'Please correct values in error below'">Error Message</p>
+                <p th:text="#{pleaseCorrectValues}">Error Message</p>
             </div>
 
             <input type="hidden" th:field="*{id}">
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Name:</h6>
+                    <h6 th:text="#{name} + ':'">Name:</h6>
                 </div>
                 <div class="col-sm-5">
-                    <input type="text" th:field="*{name}" th:class="${#fields.hasErrors('name')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Name'"/>
+                    <input type="text" th:field="*{name}" th:class="${#fields.hasErrors('name')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{name}"/>
                     <span class="help-block" th:if="${#fields.hasErrors('name')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('name')}" th:text="${err}"/>
@@ -55,10 +55,10 @@
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Change code:</h6>
+                    <h6 th:text="#{changeCode} + ':'">Change code:</h6>
                 </div>
                 <div class="col-sm-5">
-                    <input type="number" th:field="*{changeCode}" th:class="${#fields.hasErrors('changeCode')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Change code'"/>
+                    <input type="number" th:field="*{changeCode}" th:class="${#fields.hasErrors('changeCode')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{changeCode}"/>
                     <span class="help-block" th:if="${#fields.hasErrors('changeCode')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('changeCode')}" th:text="${err}"/>
@@ -69,7 +69,7 @@
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Issue date:</h6>
+                    <h6 th:text="#{issueDate} + ':'">Issue date:</h6>
                 </div>
                 <div class="col-sm-5">
                     <input type="date" th:field="*{issueDate}" th:class="${#fields.hasErrors('issueDate')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Issue date'"/>
@@ -83,11 +83,11 @@
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Developer:</h6>
+                    <h6 th:text="#{developer} + ':'">Developer:</h6>
                 </div>
                 <div class="col-sm-5">
                     <select class="form-control selectpicker" th:field="*{department}">
-                        <option value="">Nothing selected</option>
+                        <option value="" th:text="#{nothingSelected}">Nothing selected</option>
                         <option th:each="dropValue : ${departments}"
                                 th:value="${dropValue.name}"
                                 th:text="${dropValue.name}">
@@ -102,7 +102,7 @@
             </div>
 
             <div class="row">
-                <button type="submit" class="btn-sm btn-primary offset-7" th:text="*{id} == null ? 'Save' : 'Update'">Save</button>
+                <button type="submit" class="btn-sm btn-primary offset-7" th:text="#{${changeNotice.isNew() ? 'create'  : 'update'}}">Save</button>
             </div>
 
             <br><br>
