--- a/src/main/resources/templates/externaldispatches/externaldispatch-form.html
+++ b/src/main/resources/templates/externaldispatches/externaldispatch-form.html
@@ -11,12 +11,12 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-    <title>Save External Dispatch</title>
+    <title th:text="#{${externalDispatch.isNew() ? 'saveExternalDispatchFormTitle' : 'updateExternalDispatchFormTitle'}}">Save External Dispatch</title>
 </head>
 <body>
 <div class="container">
 
-    <a href="#" onclick="goBack()">Go Back</a>
+    <a href="#" onclick="goBack()" th:text="#{goBack}">Go Back</a>
     <script>
         function goBack() {
             window.history.back();
@@ -25,26 +25,26 @@
 
     <br><br>
 
-    <h3>External dispatch Directory</h3>
+    <h3 th:text="#{externalDispatchDirectory}">External dispatch Directory</h3>
 
     <hr>
 
-    <p class="h4 mb-3 offset-sm-3">External dispatch card</p>
+    <p class="h4 mb-3 offset-sm-3" th:text="#{externalDispatchCard}">External dispatch card</p>
 
     <form class="form-horizontal" th:object="${externalDispatch}" th:action="@{/externaldispatches/save}" method="post">
 
         <div th:if="${#fields.hasErrors('*')}" class="text-danger h5 offset-sm-2">
-            <p th:text="'Please correct values in error below'">Error Message</p>
+            <p th:text="#{pleaseCorrectValues}">Error Message</p>
         </div>
 
         <input type="hidden" th:field="*{id}">
 
         <div class="row mb-3">
             <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6>Waybill:</h6>
+                <h6 th:text="#{waybill} + ':'">Waybill:</h6>
             </div>
             <div class="col-sm-5">
-                <input type="text" th:field="*{waybill}" th:class="${#fields.hasErrors('waybill')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Waybill'"/>
+                <input type="text" th:field="*{waybill}" th:class="${#fields.hasErrors('waybill')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{waybill}"/>
                 <span class="help-block" th:if="${#fields.hasErrors('waybill')}">
                     <ul>
                         <li class="text-danger" th:each="err : ${#fields.errors('waybill')}" th:text="${err}"/>
@@ -55,7 +55,7 @@
 
         <div class="row mb-3">
             <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6>Dispatch date:</h6>
+                <h6 th:text="#{dispatchDate} + ':'">Dispatch date:</h6>
             </div>
             <div class="col-sm-5">
                 <input type="date" th:field="*{dispatchDate}" th:class="${#fields.hasErrors('dispatchDate')} ? 'form-control is-invalid' : 'form-control'"/>
@@ -69,13 +69,13 @@
 
         <div class="row mb-3">
             <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6>Status:</h6>
+                <h6 th:text="#{status} + ':'">Status:</h6>
             </div>
             <div class="col-sm-5">
                 <div class="btn-group btn-group-toggle" data-toggle="buttons" th:class="${#fields.hasErrors('status')} ? 'btn-group btn-group-toggle is-invalid' : 'btn-group btn-group-toggle'">
                     <div th:each="radioValue : ${T(com.igar15.filecabinet.entity.enums.Status).values()}" th:field="*{status}">
                         <input type="radio" th:field="*{status}" th:value="${radioValue}"/>
-                        <label class="btn-sm btn-light" th:for="${#ids.prev('status')}" th:text="${radioValue.name}" ></label>
+                        <label class="btn-sm btn-light" th:for="${#ids.prev('status')}" th:text="#{${'status.' + radioValue}}" ></label>
                     </div>
                 </div>
                 <span class="help-block" th:if="${#fields.hasErrors('status')}">
@@ -88,10 +88,10 @@
 
         <div class="row mb-3">
             <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6>Remark:</h6>
+                <h6 th:text="#{remark} +':'">Remark:</h6>
             </div>
             <div class="col-sm-5">
-                <input type="text" th:field="*{remark}" th:class="${#fields.hasErrors('remark')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Remark'"/>
+                <input type="text" th:field="*{remark}" th:class="${#fields.hasErrors('remark')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{remark}"/>
                 <span class="help-block" th:if="${#fields.hasErrors('remark')}">
                     <ul>
                         <li class="text-danger" th:each="err : ${#fields.errors('remark')}" th:text="${err}"/>
@@ -102,10 +102,10 @@
 
         <div class="row mb-3">
             <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6>Letter outgoing number:</h6>
+                <h6 th:text="#{letterOutgoingNumber} + ':'">Letter outgoing number:</h6>
             </div>
             <div class="col-sm-5">
-                <input type="text" th:field="*{letterOutgoingNumber}" th:class="${#fields.hasErrors('letterOutgoingNumber')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Letter outgoing number'"/>
+                <input type="text" th:field="*{letterOutgoingNumber}" th:class="${#fields.hasErrors('letterOutgoingNumber')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{letterOutgoingNumber}"/>
                 <span class="help-block" th:if="${#fields.hasErrors('letterOutgoingNumber')}">
                     <ul>
                         <li class="text-danger" th:each="err : ${#fields.errors('letterOutgoingNumber')}" th:text="${err}"/>
@@ -116,11 +116,11 @@
 
         <div class="row mb-3">
             <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6>Company:</h6>
+                <h6 th:text="#{company} + ':'">Company:</h6>
             </div>
             <div class="col-sm-5">
                 <select class="form-control selectpicker" th:field="*{company}">
-                    <option value="">Nothing selected</option>
+                    <option value="" th:text="#{nothingSelected}">Nothing selected</option>
                     <option th:each="dropValue : ${companies}"
                             th:value="${dropValue.name}"
                             th:text="${dropValue.name}">
@@ -135,7 +135,7 @@
         </div>
 
         <div class="row">
-            <button type="submit" class="btn-sm btn-primary offset-7" th:text="*{id} == null ? 'Save' : 'Update'">Save</button>
+            <button type="submit" class="btn-sm btn-primary offset-7" th:text="#{${externalDispatch.isNew() ? 'create'  : 'update'}}">Save</button>
         </div>
 
         <br><br>
